Updated migration to LevelDB

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/RenzoDD/digibyte-desktop#readme",
   "dependencies": {
-    "digibyte-js": "^2.0.4"
+    "digibyte-js": "^2.0.4",
+    "level": "^8.0.0"
   },
   "devDependencies": {
     "electron": "^25.4.0",
