--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digibyte-desktop",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A DigiByte Coin standard-compilant light wallet for desktop environment",
   "main": "src/index.js",
   "scripts": {
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/RenzoDD/digibyte-desktop#readme",
   "dependencies": {
+    "@ledgerhq/hw-app-btc": "^10.2.3",
+    "@ledgerhq/hw-transport-node-hid": "^6.28.5",
     "digibyte-js": "^2.3.0",
     "level": "^8.0.0"
   },
